src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLX14_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLX14_StringErrorContext.class */
public final class GLX14_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglXGetProcAddress(J)J", "net/labymod/core/laby3d/opengl/error/generated/GLX14ErrorContext");
        methods.put("glXGetProcAddress(Ljava/nio/ByteBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/GLX14ErrorContext");
        methods.put("glXGetProcAddress(Ljava/lang/CharSequence;)J", "net/labymod/core/laby3d/opengl/error/generated/GLX14ErrorContext");
        return methods;
    }
}
